gcc/testsuite/rust/rustc/ui/parser/integer-literal-start-ident.rs
fn 1main() {}
// { dg-error "" "" { target *-*-* } .-1 }

